test: 단일 연결 리스트 테스트 수정 및 추가